added adjustments from matthias

--- a/bertrand/templates/bertrand/Decide.html
+++ b/bertrand/templates/bertrand/Decide.html
@@ -72,7 +72,7 @@
 <b>Zur Erinnerung:</b>
 <br>
 Ein Euro entspricht {{exchange_rate}} Talern. Sie stehen im Wettbewerb mit zwei weiteren Firmen.
-Die {{Constants.m_consumer}} Konsumenten kaufen von der Firma mit dem niedrigsten Preis. Falls mehrere Firmen den gleichen Preis setzen, wird der Gewinn gleichmäßig aufgeteilt.
+Die {{Constants.m_consumer}} Kunden kaufen von der Firma mit dem niedrigsten Preis. Falls mehrere Firmen den gleichen Preis setzen, wird der Gewinn gleichmäßig aufgeteilt.
 
 
 
