--- a/bertrand/templates/bertrand/EndSG.html
+++ b/bertrand/templates/bertrand/EndSG.html
@@ -7,7 +7,7 @@
 
 
     Der Zufallsmechanismus hat entschieden, dass dies die letzte Runde des {{super_game_count}}. Spiels war. 
-    Sie haben im {{super_game_count}}. Siel insgesamt <b>{{accumulated_profit}} Taler </b> verdient. <br>
+    Sie haben im {{super_game_count}}. Siel insgesamt einen Gewinn von <b>{{accumulated_profit}} Taler </b> erzielt. <br>
     <br><br>
     <br><br>
 
@@ -17,8 +17,8 @@
         Sie spielen jetzt das gleiche Spiel erneut. Es besteht wieder eine Wahrscheinlichkeit von 95%, dass nach jeder abgeschlossenen Runde eine weitere Runde gespielt wird.
         <br><br>
 
-        WICHTIG: Beachten Sie, dass Sie im folgenden Spiel mit neuen Mitspielern in einer
-        Gruppe sein werden. 
+        WICHTIG: Beachten Sie, dass Sie im folgenden Spiel mit neuen Mitspielern in einem
+        Markt sein werden. 
         
         {% if super_game_count == 2 %}
             <br><br>Dies wird der letzte Durchgang sein.
