--- a/bertrand/templates/bertrand/HistoryResults.html
+++ b/bertrand/templates/bertrand/HistoryResults.html
@@ -6,9 +6,9 @@
 {% endblock %}
 
 {% block content %}
-<br><b>Zur Erinnerung: Sie sind in diesem Spiel Firma {{player.id_in_group}}</b></br>
+<br><b>Zur Erinnerung: Sie sind in diesem Spiel Firma {{player.id_in_group}}.</b></br>
 <br>
-<br><b>Fahren Sie mit der Maus über den Graphen, um die Preise in der jeweiligen Period zu sehen.</b></br>
+<br><b>Fahren Sie mit der Maus über den Graphen, um die Preise in der jeweiligen Periode zu sehen.</b></br>
 <br>
 
 <div id="chart" style="height: 300px; width: 100%;"></div>
@@ -94,7 +94,7 @@
                     curve: 'smooth'
                 },
                 title: {
-                    text: 'Preishistorie',
+                    text: 'Historie',
                     align: 'left'
                 },
                 grid: {
