--- a/introduction/templates/introduction/Introduction_1.html
+++ b/introduction/templates/introduction/Introduction_1.html
@@ -4,7 +4,7 @@
 {% block title %}Herzlich Willkommen{% endblock %}
 
 {% block content %}
-Hallo und herzlich willkommen zu unserem Experiment. 
+Hallo und herzlich Willkommen zu unserem Experiment. 
 In der nächsten Stunde werden Sie an einem Computer Entscheidungen treffen.
 Bitte lesen Sie die Instruktionen aufmerksam durch.
 Alle Teilnehmer erhalten die gleichen Instruktionen.
