--- a/introduction/templates/introduction/Introduction_2.html
+++ b/introduction/templates/introduction/Introduction_2.html
@@ -12,7 +12,7 @@ In diesem Experiment treffen Sie wiederholt Preisentscheidungen.
 <br><br>
 Im Experiment verwenden wir eine fiktive Geldeinheit namens Taler.
  Im Anschluss an das Experiment werden die Taler in Euro umgerechnet und Ihnen ausgezahlt.
-  Dabei entsprechen {{ exchange_rate }} Taler einem Euro. Die Euro Beträge werden auf die erste Nachkommastelle gerundet. 
+  Dabei entsprechen {{ exchange_rate }} Taler einem Euro. Die Euro-Beträge werden auf die erste Nachkommastelle gerundet. 
 <br><br>
 
 <b>Beispiel:</b><br>
