--- a/introduction/templates/introduction/Introduction_4.html
+++ b/introduction/templates/introduction/Introduction_4.html
@@ -4,7 +4,7 @@
 {% block title %}Erklärung des Experiments{% endblock %}
 
 {% block content %}
-Nach jeder Runde werden alle Spieler über die gewählten Preise aller Firmen informiert, sowie über die Gewinne aller Firmen und den eigenen Gesamtgewinn des Spiels.
+Nach jeder Runde werden alle Spieler über die gewählten Preise aller Firmen informiert, sowie über die Gewinne aller Firmen und den eigenen Gesamtgewinn aus allen bisherigen Runden des Spiels.
  In der nächsten Runde hat jede Firma wieder die Möglichkeit den Preis neu zu wählen. Die Teilnehmer, mit denen Sie konkurrieren, sind dabei in allen Runden eines Spiels identisch. 
 
 <br><br>
@@ -16,11 +16,11 @@ Das Ergebnis entscheidet, ob eine weitere Runde gespielt wird oder nicht. Bei ei
 
 
 <b>Beachten Sie:<br>
-Sie spielen das beschriebene Spiel insgesamt 3 mal.</b> Nach jedem Spiel werden sie mit neuen Teilnehmern zu einem neuen Markt zusammengesetzt.
-Das bedeutet, dass Sie in jedem der drei Spiele mit anderen Teilnehmer interagieren. 
+Sie spielen das beschriebene Spiel insgesamt drei mal.</b> Nach jedem Spiel werden sie mit neuen Teilnehmern zu einem neuen Markt zusammengesetzt.
+Das bedeutet, dass Sie in jedem der drei Spiele mit anderen Teilnehmern interagieren. 
 
 <br><br>
-Nach Spielende wird zufällig entschieden, welches der 3 Spiele ausgezahlt wird. Dieser Gewinn wird Ihnen anschließend ausgezahlt.
+Nach Spielende wird zufällig entschieden, welches der drei Spiele ausgezahlt wird. Dieser Gewinn wird Ihnen anschließend ausgezahlt.
  Außerdem erhalten Sie zusätzlich {{show_up_fee}} für die Teilnahme an diesem Experiment. 
 <br><br>
 Als Hilfsmittel blenden wir Ihnen einen virtuellen Taschenrechner ein, mit dem Sie Ihren Gewinn pro Runde berechnen können.
