--- a/introduction/templates/introduction/Algorithm_Introduction.html
+++ b/introduction/templates/introduction/Algorithm_Introduction.html
@@ -7,17 +7,17 @@
 
 
 Bevor Sie in jeder Runde Ihren Preis wählen, erhalten Sie eine <b>Preisempfehlung</b>.
- Ein Algorithmus gibt Ihnen also einen konkreten Preisvorschlag. Es handelt sich dabei um einen Computeralgorithmus.
+ Ein Algorithmus macht Ihnen also einen konkreten Preisvorschlag. Es handelt sich dabei um einen Computeralgorithmus.
   Alle drei Firmen im Markt erhalten dieselbe Preisempfehlung.
-   Die Empfehlung des Algorithmus basiert auf den gespielten Preisen aller Teilnehmer in der letzten Runde und
-    kann sich somit in jeder Runde ändern. 
+Die Empfehlung des Algorithmus basiert auf den vorherigen Preisen aller Teilnehmer in Ihrem Markt und kann sich somit in jeder Runde ändern. 
+
     <br><br>
 <b>Wichtig:</b> Bei der Preisempfehlung handelt es sich lediglich um einen <b>Vorschlag</b>. Es steht Ihnen frei, einen anderen Preis als den empfohlenen zu setzen. Dies kann allerdings Auswirkungen auf die Empfehlungen an Sie und Ihre Wettbewerber in der Zukunft haben.
 Der Algorithmus zielt darauf ab, die <b>Gesamtgewinne aller Firmen über alle Runden hinweg zu maximieren.</b>
  Es wird Ihnen also eine Empfehlungen ausgesprochen, die allen Firmen langfristig den größtmöglichen Gewinn ermöglicht.
   Der Algorithmus empfiehlt somit <b>nicht</b> einen Preis, der den höchstmöglichen Gewinn in einer einzelnen Runde erzielt. <br>
-  <b> Es werden Preise empfohlen die insgesamt über das gesamte Experiment einen hohen Gewinn erreichen.</b><br>
-Der Algorithmus selbst ist kein Marktteilnehmer und kann auch keinen Gewinn generieren, <b>er dient nur als Informationsquelle für alle Teilnehmer.</b>
+  <b> Es werden Preise empfohlen, die insgesamt über das gesamte Experiment einen hohen Gewinn erzielen.</b><br>
+Der Algorithmus selbst ist kein Marktteilnehmer und kann auch keinen Gewinn generieren, <b>er dient nur als Information für alle Teilnehmer.</b>
 
 
 <br><br>
