--- a/introduction/templates/introduction/Introduction_3.html
+++ b/introduction/templates/introduction/Introduction_3.html
@@ -9,12 +9,12 @@ In diesem Experiment repräsentieren Sie eine Firma in einem Produktmarkt.
   Diese Firmen werden von zwei anderen Experiment-Teilnehmern repräsentiert.
    Das Experiment hat mehrere Runden.
     Sie treffen in jeder Runde auf dieselben Firmen (also Experiment-Teilnehmer).
-        Alle Firmen entscheiden in jeder Runde erneut <b>unabhängig und gleichzeitig</b>,
+        Alle Firmen entscheiden in jeder Runde erneut <b>eigenständig und gleichzeitig</b>,
          für wie viel Sie Ihr Produkt verkaufen möchten.
-          Sie können Ihr Produkt für einen Stückpreis von {{Constants.deviation_price}}, 2, … oder {{Constants.maximum_price}} Taler verkaufen (nur ganze Taler). 
-          Es gibt keine Produktionskosten. Ihr Preis multipliziert mit der Anzahl verkaufter Einheiten ist gleich Ihr Gewinn. Formal ausgedrückt:
+          Sie können Ihr Produkt für einen Peis von {{Constants.deviation_price}}, 2, … oder {{Constants.maximum_price}} Taler verkaufen (nur ganze Taler). 
+          Es gibt keine Produktionskosten. Ihr Gewinn ist das Produkt aus Preis und der Anzahl verkaufter Einheiten. Formal ausgedrückt:
           <br><br>
-          <b> Gewinn = Preis x verkaufte Menge </b>
+          <b> Gewinn = Preis x verkaufte Einheiten </b>
           <br><br>
      Der Markt hat {{Constants.m_consumer}} identische Kunden.
       Jeder Kunde möchte in jeder Runde <b>eine Einheit</b> des Produkts möglichst günstig kaufen.
@@ -22,7 +22,7 @@ In diesem Experiment repräsentieren Sie eine Firma in einem Produktmarkt.
 <br><br>
 Sie konkurrieren mit den anderen beiden Firmen im Markt.
  Die Firma mit dem <b>niedrigsten Preis in der jeweiligen Runde</b> verkauft die Produkte.
-  Die anderen Firmen mit höheren Preisen <b>verkaufen Ihre Produkte in der jeweiligen Runde nicht und erhalten daher auch keinen Gewinn.</b>
+  Die anderen Firmen mit höheren Preisen <b>verkaufen Ihre Produkte in der jeweiligen Runde nicht und erhalten daher einen Gewinn von Null.</b>
    Sollten zwei oder alle drei Firmen Ihr Produkt für den gleichen Preis verkaufen wollen,
     teilt sich die Nachfrage gleichmäßig auf die zwei bzw. drei Firmen auf.
 <br><br>
@@ -31,13 +31,13 @@ Sie konkurrieren mit den anderen beiden Firmen im Markt.
 
 <h3> Beispiele </h3>
 <b>Beispiel 1:</b>
-Firma 1 setzt einen Preis von 1, Firma 2 setzt einen Preis von 1, Firma 3 setzt einen Preis von 5. Somit haben Firma 1 und 2 gemeinsam den niedrigsten Preis gesetzt. Bei einem Preis von einem Taler ist der Gesamtgewinn 30 Taler, da es 30 Kunden gibt. Firma 1 und 2 verkaufen beide die gleiche Anzahl an Produkten und bekommen damit den gleichen Gewinn von 15 Talern ausgezahlt. Firma 3 verkauft nichts und hat einen Gewinn von 0. 
+Firma 1 setzt einen Preis von 1, Firma 2 setzt einen Preis von 1, Firma 3 setzt einen Preis von 5. Somit haben Firma 1 und 2 gemeinsam den niedrigsten Preis gesetzt. Firma 1 und 2 verkaufen beide die gleiche Anzahl an Produkten, beide Firmen haben jeweils 15 Kunden und bekommen damit den gleichen Gewinn von 15 Talern. Firma 3 verkauft nichts und hat einen Gewinn von 0. 
 <br><br>
 <b>Beispiel 2:</b>
-Firma 1 setzt einen Preis von 10, Firma 2 setzt einen Preis von 10, Firma 3 setzt einen Preis von 10. Somit haben Firma 1, 2 und 3 gemeinsam den niedrigsten Preis gesetzt. Sie verkaufen alle die gleiche Anzahl an Produkten (jeweils 10) und bekommen damit den gleichen Gewinn von 100 Talern ausgezahlt. 
+Firma 1 setzt einen Preis von 10, Firma 2 setzt einen Preis von 10, Firma 3 setzt einen Preis von 10. Somit haben Firma 1, 2 und 3 gemeinsam den niedrigsten Preis gesetzt. Sie verkaufen alle die gleiche Anzahl an Produkten (jeweils 10) und bekommen damit den gleichen Gewinn von 100 Talern. 
 <br><br>
 <b>Beispiel 3:</b>
-Firma 1 setzt einen Preis von 1, Firma 2 setzt einen Preis von 4, Firma 3 setzt einen Preis von 8. Somit hat Firma 1 den niedrigsten Preis gesetzt. Firma 1 verkauft als einzige das Produkt zu einem Preis von 1 an alle 30 Kunden und bekommt damit einen Gewinn von 30 Talern ausgezahlt. Firma 2 und 3 verkaufen beide nichts und haben einen Gewinn von 0. 
+Firma 1 setzt einen Preis von 1, Firma 2 setzt einen Preis von 4, Firma 3 setzt einen Preis von 8. Somit hat Firma 1 den niedrigsten Preis gesetzt. Firma 1 verkauft als einzige das Produkt zu einem Preis von 1 an alle 30 Kunden und bekommt damit einen Gewinn von 30 Talern. Firma 2 und 3 verkaufen beide nichts und haben einen Gewinn von 0. 
 <br><br>
 {% next_button %}
 {% endblock %}
