adjusted tests, added questions for survey and player specific SG payed

--- a/payment/templates/payment/admin_report.html
+++ b/payment/templates/payment/admin_report.html
@@ -53,7 +53,7 @@
             <td>{{ p.vars.final_payoff_sg_2 }} </td>
             <td>{{ p.vars.final_payoff_sg_3 }} </td>
 
-            <td>{{ subsession.payed_sg }}</td>
+            <td>{{ p.vars.payed_sg }}</td>
             <td>{{ participation_fee }}</td>
             <td>{{ p.vars.final_money_no_show_up }}</td>
             <td>{{ p.vars.final_money_with_show_up }}</td>
