--- a/survey/templates/survey/SurveyQuestionsAlg.html
+++ b/survey/templates/survey/SurveyQuestionsAlg.html
@@ -401,8 +401,8 @@
     
 </div>
 
-{% formdfield player.q_alg_comments%}
-{% formdfield player.q_alg_improve%}
+{% formfield player.q_alg_comments%}
+{% formfield player.q_alg_improve%}
 
 <br>Bitte klicken Sie nach Beantwortung der Fragen auf "Weiter".<br><br>
 
