--- a/introduction/templates/introduction/Introduction_2.html
+++ b/introduction/templates/introduction/Introduction_2.html
@@ -16,9 +16,9 @@ Im Experiment verwenden wir eine fiktive Geldeinheit namens Taler.
 <br><br>
 
 <b>Beispiel:</b><br>
-Spieler A hat im Experiment 465 Taler verdient.
+Teilnehmer A hat im Experiment 465 Taler verdient.
  Umgerechnet entspricht das {{ coins_in_euro }} €.
-  Auf die erste Nachkommastelle gerundet werden Spieler A {{ coins_in_euro_rounded }} € ausgezahlt.
+  Auf die erste Nachkommastelle gerundet werden Teilnehmer A {{ coins_in_euro_rounded }} € ausgezahlt.
 
 <br>
 <br>
