--- a/survey/templates/survey/SurveyQuestionsAll.html
+++ b/survey/templates/survey/SurveyQuestionsAll.html
@@ -108,7 +108,7 @@
 {% formfield player.q_all_communication%}
 
 
-Nehmen Sie an Sie wüssten, dass die anderen Marktteilnehmer einen Preis von 10 Talern gewählt haben. Wie sozial angemessen wäre es in dieser Situation einen eigenen Preis von ...
+Nehmen Sie an Sie wüssten, dass die anderen Marktteilnehmer einen Preis von 10 Taler gewählt haben. Wie sozial angemessen wäre es in dieser Situation einen eigenen Preis von ...
 {% formfield player.q_socially_appropriate_10%}
 {% formfield player.q_socially_appropriate_9%}
 {% formfield player.q_socially_appropriate_1%}
