--- a/bertrand/templates/bertrand/HistoryResults.html
+++ b/bertrand/templates/bertrand/HistoryResults.html
@@ -8,7 +8,7 @@
 {% block content %}
 <br><b>Zur Erinnerung: Sie sind in diesem Spiel Firma {{player.id_in_group}}.</b></br>
 <br>
-<br><b>Fahren Sie mit der Maus über den Graphen, um die Preise in der jeweiligen Periode zu sehen.</b></br>
+<br><b>Fahren Sie mit der Maus über den Graphen, um die Preise in der jeweiligen Runde zu sehen.</b></br>
 <br>
 
 <div id="chart" style="height: 300px; width: 100%;"></div>
@@ -116,7 +116,7 @@
                 },
                 yaxis: {
                     title: {
-                        text: 'Preise'
+                        text: 'Preis'
                     },
                     min: {{ Constants.deviation_price }}  ,
                     max: {{ Constants.monopoly_price }}
