--- a/introduction/templates/introduction/Introduction_4.html
+++ b/introduction/templates/introduction/Introduction_4.html
@@ -4,12 +4,12 @@
 {% block title %}Erklärung des Experiments{% endblock %}
 
 {% block content %}
-Nach jeder Runde werden alle Spieler über die gewählten Preise aller Firmen informiert, sowie über die Gewinne aller Firmen und den eigenen Gesamtgewinn aus allen bisherigen Runden des Spiels.
- In der nächsten Runde hat jede Firma wieder die Möglichkeit den Preis neu zu wählen. Die Teilnehmer, mit denen Sie konkurrieren, sind dabei in allen Runden eines Spiels identisch. 
+Nach jeder Runde werden alle Spieler über die gewählten Preise aller drei Firmen informiert, sowie über die Gewinne aller Firmen und den eigenen Gesamtgewinn aus allen bisherigen Runden des Spiels.
+ In der nächsten Runde hat jede Firma wieder die Möglichkeit Ihren Preis neu zu wählen. Die Teilnehmer, mit denen Sie konkurrieren, sind dabei in allen Runden eines Spiels identisch. 
 
 <br><br>
 Nach jeder Runde entscheidet ein Zufallsmechanismus, ob eine weitere Runde gespielt wird oder das Spiel endet.
-Die Wahrscheinlichkeit, dass eine weitere Runde gespielt liegt bei 95%. Das Spiel endet also nach jeder Runde mit einer Wahrscheinlichkeit von 5%.<br>
+Die Wahrscheinlichkeit, dass eine weitere Runde gespielt liegt bei 95 %. Das Spiel endet also nach jeder Runde mit einer Wahrscheinlichkeit von 5 %.<br>
 Bildlich gesprochen wirft der Computer vor jeder möglichen weiteren Runde einen virtuellen Würfel mit 20 Seiten.
 Das Ergebnis entscheidet, ob eine weitere Runde gespielt wird oder nicht. Bei einer Zahl von 20 ist das Spiel vorbei, bei allen anderen Zahlen wird eine weitere Runde gespielt.
 <br><br>
@@ -20,7 +20,7 @@ Sie spielen das beschriebene Spiel insgesamt drei mal.</b> Nach jedem Spiel werd
 Das bedeutet, dass Sie in jedem der drei Spiele mit anderen Teilnehmern interagieren. 
 
 <br><br>
-Nach Spielende wird zufällig entschieden, welches der drei Spiele ausgezahlt wird. Dieser Gewinn wird Ihnen anschließend ausgezahlt.
+Nach Spielende wird zufällig entschieden, welches der drei Spiele ausgezahlt wird. Diesen Gewinn erhalten Sie im Anschluss an das Experiment.
  Außerdem erhalten Sie zusätzlich {{show_up_fee}} für die Teilnahme an diesem Experiment. 
 <br><br>
 Als Hilfsmittel blenden wir Ihnen einen virtuellen Taschenrechner ein, mit dem Sie Ihren Gewinn pro Runde berechnen können.
