--- a/introduction/templates/introduction/Algorithm_Introduction.html
+++ b/introduction/templates/introduction/Algorithm_Introduction.html
@@ -1,7 +1,7 @@
 {% extends "global/Page.html" %}
 {% load otree %}
 
-{% block title %}Preisempfehlungen im Experiment{% endblock %}
+{% block title %}Preisempfehlungen im Spiel{% endblock %}
 
 {% block content %}
 
@@ -16,7 +16,7 @@ Die Empfehlung des Algorithmus basiert auf den vorherigen Preisen aller Teilnehm
 Der Algorithmus zielt darauf ab, die <b>Gesamtgewinne aller Firmen über alle Runden hinweg zu maximieren.</b>
  Es wird Ihnen also eine Empfehlungen ausgesprochen, die allen Firmen langfristig den größtmöglichen Gewinn ermöglicht.
   Der Algorithmus empfiehlt somit <b>nicht</b> einen Preis, der den höchstmöglichen Gewinn in einer einzelnen Runde erzielt. <br>
-  <b> Es werden Preise empfohlen, die insgesamt über das gesamte Experiment einen hohen Gewinn erzielen.</b><br>
+  <b> Es werden Preise empfohlen, die insgesamt über das gesamte Spiel einen hohen Gewinn erzielen.</b><br>
 Der Algorithmus selbst ist kein Marktteilnehmer und kann auch keinen Gewinn generieren, <b>er dient nur als Information für alle Teilnehmer.</b>
 
 
