--- a/introduction/templates/introduction/Introduction_4.html
+++ b/introduction/templates/introduction/Introduction_4.html
@@ -1,10 +1,10 @@
 {% extends "global/Page.html" %}
 {% load otree %}
 
-{% block title %}Erklärung des Experiments{% endblock %}
+{% block title %}Erklärung des Spiels{% endblock %}
 
 {% block content %}
-Nach jeder Runde werden alle Spieler über die gewählten Preise aller drei Firmen informiert, sowie über die Gewinne aller Firmen und den eigenen Gesamtgewinn aus allen bisherigen Runden des Spiels.
+Nach jeder Runde werden alle Teilnehmer über die gewählten Preise aller drei Firmen informiert, sowie über die Gewinne aller Firmen und den eigenen Gesamtgewinn aus allen bisherigen Runden des Spiels.
  In der nächsten Runde hat jede Firma wieder die Möglichkeit Ihren Preis neu zu wählen. Die Teilnehmer, mit denen Sie konkurrieren, sind dabei in allen Runden eines Spiels identisch. 
 
 <br><br>
