--- a/payment/templates/payment/admin_report.html
+++ b/payment/templates/payment/admin_report.html
@@ -33,6 +33,7 @@
         <tr>
             <th>Participant code</th>
             <th>Participant label</th>
+            <th><b>Participant IP</b></th>
             <th>Progress</th>
             <th>Taler Super Game 1</th>
             <th>Taler Super Game 2</th>
@@ -40,13 +41,14 @@
             <th>Payed Super Game</th>
             <th>Participation fee</th>
             <th>Super Game Payoff</th>
-            <th>Total</th>
+            <th><b>Total</b></th>
         </tr>
 
         {% for p in participants %}
         <tr>
             <td style="font-family: 'Courier New'">{{ p.code }}</td>
-            <td>{{ p.label|default_if_none:"" }}</td>
+            <td> {{ p.label|default_if_none:"" }}</td>
+            <td> <b>{{p.ip_address}} </b> </td>
             <td>{{ p.current_page_ }}</td>
 
             <td>{{ p.vars.final_payoff_sg_1 }} </td>
@@ -56,7 +58,7 @@
             <td>{{ p.vars.payed_sg }}</td>
             <td>{{ participation_fee }}</td>
             <td>{{ p.vars.final_money_no_show_up }}</td>
-            <td>{{ p.vars.final_money_with_show_up }}</td>
+            <td><b>{{ p.vars.final_money_with_show_up }}</b></td>
         </tr>
         {% endfor %}
 
