--- a/bertrand/templates/bertrand/Decide.html
+++ b/bertrand/templates/bertrand/Decide.html
@@ -10,8 +10,8 @@
 <div class="row">
   <div class="column-left"> 
   	{% if treatment == 'recommendation'%}
-
-		<b> Preisempfehlung in dieser Runde: </b><br>
+		<div class="transparent"> 
+		<b> <u>Preisempfehlung in dieser Runde: </u></b><br>
 		{% if player.round_number == 1%}
 			Der Algorithmus empfiehlt einen Preis von <b>{{group.recommendation}}</b> Taler.
 		{% else %}
@@ -27,6 +27,7 @@
 				unterschiedliche Preise gewählt. Der Algorithmus empfiehlt einen Preis von <b>{{group.recommendation}} Taler.</b>
 			{% endif %}
 		{% endif %}
+		</div>
 	{% endif %}
     <br><br>
     <b>
@@ -80,6 +81,14 @@ Die {{Constants.m_consumer}} Kunden kaufen von der Firma mit dem niedrigsten Pre
 {% endblock %}
 {% block scripts %}
 <style>
+.transparent {
+ text-align: center;
+  width: auto;
+  padding: auto;
+  border: 3px solid gray;
+  margin: auto;
+}
+
 .column-left {
   float: left;
   margin: auto;
