--- a/introduction/templates/introduction/Algorithm_Introduction.html
+++ b/introduction/templates/introduction/Algorithm_Introduction.html
@@ -14,7 +14,7 @@ Die Empfehlung des Algorithmus basiert auf den vorherigen Preisen aller Teilnehm
     <br><br>
 <b>Wichtig:</b> Bei der Preisempfehlung handelt es sich lediglich um einen <b>Vorschlag</b>. Es steht Ihnen frei, einen anderen Preis als den empfohlenen zu setzen. Dies kann allerdings Auswirkungen auf die Empfehlungen an Sie und Ihre Wettbewerber in der Zukunft haben.
 Der Algorithmus zielt darauf ab, die <b>Gesamtgewinne aller Firmen über alle Runden hinweg zu maximieren.</b>
- Es wird Ihnen also eine Empfehlungen ausgesprochen, die allen Firmen langfristig den größtmöglichen Gewinn ermöglicht.
+ Es wird Ihnen also eine Empfehlung ausgesprochen, die allen Firmen langfristig den größtmöglichen Gewinn ermöglicht.
   Der Algorithmus empfiehlt somit <b>nicht</b> einen Preis, der den höchstmöglichen Gewinn in einer einzelnen Runde erzielt. <br>
   <b> Es werden Preise empfohlen, die insgesamt über das gesamte Spiel einen hohen Gewinn erzielen.</b><br>
 Der Algorithmus selbst ist kein Marktteilnehmer und kann auch keinen Gewinn generieren, <b>er dient nur als Information für alle Teilnehmer.</b>
