moved algo intro up one page as in printed version and added tests

--- a/introduction/templates/introduction/Introduction_3.html
+++ b/introduction/templates/introduction/Introduction_3.html
@@ -4,7 +4,7 @@
 {% block title %}Erklärung des Spiels{% endblock %}
 
 {% block content %}
-In diesem Spiel repräsentieren Sie eine Firma in einem Produktmarkt.
+In diesem Spiel repräsentieren Sie eine Firma in einem virtuellen Produktmarkt.
  In dem Markt verkaufen zwei weitere Firmen das gleiche Produkt wie Sie.
   Diese Firmen werden von zwei anderen Experiment-Teilnehmern repräsentiert.
    Das Spiel hat mehrere Runden.
