--- a/introduction/templates/introduction/Introduction_4.html
+++ b/introduction/templates/introduction/Introduction_4.html
@@ -1,7 +1,7 @@
 {% extends "global/Page.html" %}
 {% load otree %}
 
-{% block title %}Erklärung des Spiels{% endblock %}
+{% block title %}Dauer des Spiels{% endblock %}
 
 {% block content %}
 Nach jeder Runde werden alle Teilnehmer über die gewählten Preise aller drei Firmen informiert, sowie über die Gewinne aller Firmen und den eigenen Gesamtgewinn aus allen bisherigen Runden des Spiels.
