--- a/bertrand/templates/bertrand/Decide.html
+++ b/bertrand/templates/bertrand/Decide.html
@@ -13,18 +13,18 @@
 		<div class="transparent"> 
 		<b> Preisempfehlung in dieser Runde: </b><br>
 		{% if player.round_number == 1%}
-			Der Algorithmus empfiehlt einen Preis von <b>{{group.recommendation}}</b> Taler.
+			Der Algorithmus empfiehlt allen Firmen einen Preis von <b>{{group.recommendation}}</b> Taler.
 		{% else %}
 			{% if group.recommendation == Constants.monopoly_price %}
 				In der vergangenen Runde haben alle Firmen einen Preis von {{player_price_last_round}} Taler gewählt.
 					{% if player_price_last_round != Constants.monopoly_price %}
-						Für einen höheren Gesamtgewinn empfiehlt der Algorithmus in dieser Runde den Preis auf <b>{{group.recommendation}} Taler</b> zu erhöhen.
+						Für einen höheren Gesamtgewinn empfiehlt der Algorithmus in dieser Runde allen Firmen den Preis auf <b>{{group.recommendation}} Taler</b> zu erhöhen.
 					{% else %}
-						Der Algorithmus empfiehlt den Preis von <b>{{group.recommendation}} Taler</b> beizubehalten.
+						Der Algorithmus empfiehlt allen Firmen den Preis von <b>{{group.recommendation}} Taler</b> beizubehalten.
 					{% endif %}
 				{% else %}
 				In der vergangenen Runde gab es Abweichungen vom empfohlenen Preis und die Firmen haben 
-				unterschiedliche Preise gewählt. Der Algorithmus empfiehlt einen Preis von <b>{{group.recommendation}} Taler.</b>
+				unterschiedliche Preise gewählt. Der Algorithmus empfiehlt allen Firmen einen Preis von <b>{{group.recommendation}} Taler.</b>
 			{% endif %}
 		{% endif %}
 		</div>
