added form field error field and error_field check when submission fails

--- a/survey/templates/survey/SurveyQuestionsAll.html
+++ b/survey/templates/survey/SurveyQuestionsAll.html
@@ -113,6 +113,7 @@ Nehmen Sie an Sie wüssten, dass die anderen Marktteilnehmer einen Preis von 10 
 {% formfield player.q_socially_appropriate_9%}
 {% formfield player.q_socially_appropriate_1%}
 
+{{ form.q_all_other_players.errors }}
 
 <br>Bitte klicken Sie nach Beantwortung der Fragen auf "Weiter".<br><br>
 
