--- a/survey/templates/survey/SurveyQuestionsFalk.html
+++ b/survey/templates/survey/SurveyQuestionsFalk.html
@@ -498,5 +498,12 @@
 </div>
 <br>Bitte klicken Sie nach Beantwortung der Fragen auf "Weiter".<br><br>
 
+{{ form.q_falk1.errors }}
+{{ form.q_falk2.errors }}
+{{ form.q_falk3.errors }}
+{{ form.q_falk4.errors }}
+{{ form.q_falk5.errors }}
+
+
 {% next_button %}
 {% endblock %}
