--- a/survey/templates/survey/SurveyQuestionsAlg.html
+++ b/survey/templates/survey/SurveyQuestionsAlg.html
@@ -404,7 +404,15 @@
 {% formfield player.q_alg_comments%}
 {% formfield player.q_alg_improve%}
 
+
+
 <br>Bitte klicken Sie nach Beantwortung der Fragen auf "Weiter".<br><br>
+
+
+{{ form.q_alg_relevant_other_player.errors }}
+{{ form.q_alg_no_recommendation.errors }}
+{{ form.q_alg_how_sure.errors }}
+{{ form.q_alg_helpful.errors }}
 
 {% next_button %}
 {% endblock %}
