removed round numbers, profits, too much explanation and so on

--- a/bertrand/templates/bertrand/Decide.html
+++ b/bertrand/templates/bertrand/Decide.html
@@ -2,7 +2,7 @@
 {% load otree %}
 
 {% block title %}
-    Wählen Sie Ihren Preis (Runde {{player.round_number}} in Spiel {{super_game_count}})
+    Wählen Sie Ihren Preis
 {% endblock %}
 
 {% block content %}
@@ -69,11 +69,6 @@
   </div>
 </div>
 
-<br><br>
-<b>Zur Erinnerung:</b>
-<br>
-Ein Euro entspricht {{exchange_rate}} Taler. Sie stehen im Wettbewerb mit zwei weiteren Firmen.
-Die {{Constants.m_consumer}} Kunden kaufen von der Firma mit dem niedrigsten Preis. Falls mehrere Firmen den gleichen Preis setzen, wird der Gewinn gleichmäßig aufgeteilt.
 
 
 
