Removed some loaded language

--- a/introduction/templates/introduction/Introduction_3.html
+++ b/introduction/templates/introduction/Introduction_3.html
@@ -20,9 +20,9 @@ In diesem Spiel repräsentieren Sie eine Firma in einem virtuellen Produktmarkt.
       Jeder Kunde möchte in jeder Runde eines Spiels <b>eine Einheit</b> des Produkts möglichst günstig kaufen.
        Jeder Kunde ist bereit bis zu {{Constants.maximum_price}} Taler für diese Einheit des Produkts auszugeben.
 <br><br>
-Sie konkurrieren mit den anderen beiden Firmen im Markt.
- Die Firma mit dem <b>niedrigsten Preis in der jeweiligen Runde</b> verkauft Ihre Produkte.
-  Die anderen Firmen mit höheren Preisen <b>verkaufen Ihre Produkte in der jeweiligen Runde nicht und erhalten daher einen Gewinn von Null.</b>
+Sie konkurrieren mit den anderen beiden Firmen im Markt. 
+ Die Firma mit dem <b>niedrigsten Preis (Marktpreis) in der jeweiligen Runde</b> verkauft Ihre Produkte.
+  Firmen mit höheren Preisen <b>verkaufen Ihre Produkte in der jeweiligen Runde nicht und erhalten daher einen Gewinn von Null.</b>
    Sollten zwei oder alle drei Firmen Ihr Produkt für den gleichen Preis verkaufen wollen,
     teilt sich die Nachfrage gleichmäßig auf die zwei bzw. drei Firmen auf.
 <br><br>
