--- a/introduction/templates/introduction/Introduction_4.html
+++ b/introduction/templates/introduction/Introduction_4.html
@@ -4,8 +4,8 @@
 {% block title %}Dauer des Spiels{% endblock %}
 
 {% block content %}
-Nach jeder Runde werden alle Teilnehmer über die gewählten Preise aller drei Firmen informiert, sowie über die Gewinne aller Firmen und den eigenen Gesamtgewinn aus allen bisherigen Runden des Spiels.
- In der nächsten Runde hat jede Firma wieder die Möglichkeit Ihren Preis neu zu wählen. Die Teilnehmer, mit denen Sie konkurrieren, sind dabei in allen Runden eines Spiels identisch. 
+Nach jeder Runde werden alle Teilnehmer über die gewählten Preise aller drei Firmen und ihren eigenen Gewinn informiert.
+ In der nächsten Runde hat jede Firma wieder die Möglichkeit Ihren Preis neu zu wählen. Die Teilnehmer sind dabei in allen Runden innerhalbes eines Spiels identisch. 
 
 <br><br>
 Nach jeder Runde entscheidet ein Zufallsmechanismus, ob eine weitere Runde gespielt wird oder das Spiel endet.
