--- a/bertrand/templates/bertrand/Decide.html
+++ b/bertrand/templates/bertrand/Decide.html
@@ -9,11 +9,11 @@
 
 <div class="row">
   <div class="column-left"> 
-  	{% if treatment == 'recommendation'%}
+  	{% if treatment != 'baseline'%}
 		<div class="transparent"> 
 		<b> Preisempfehlung in dieser Runde: </b><br>
 		{% if player.round_number == 1%}
-			Der Algorithmus empfiehlt allen Firmen einen Preis von <b>{{group.recommendation}}</b> Taler.
+			Der Algorithmus empfiehlt allen Firmen einen Preis von <b>{{group.recommendation}} Taler.</b>
 		{% else %}
 			{% if group.recommendation == Constants.monopoly_price %}
 				In der vergangenen Runde haben alle Firmen einen Preis von {{player_price_last_round}} Taler gewählt.
