fixed some stuff in the instructions

--- a/bertrand/templates/bertrand/RoundResults.html
+++ b/bertrand/templates/bertrand/RoundResults.html
@@ -30,7 +30,7 @@
 
     </table>
     
-    Ihr Preis in dieser Runde betrug {{ player.price }} Taler. Der Marktpreis betrug {{ group.winning_price }} Taler. Sie erhalten einen Gewinn von {{player.profit}} Taler. 
+    Ihr Preis in dieser Runde betrug {{ player.price }} Taler. Der Marktpreis betrug {{ group.winning_price }} Taler. Sie erhalten in dieser Runde einen Gewinn von {{player.profit}} Taler. 
 
     <br><br>
 
