--- a/introduction/templates/introduction/Algorithm_Introduction.html
+++ b/introduction/templates/introduction/Algorithm_Introduction.html
@@ -1,7 +1,7 @@
 {% extends "global/Page.html" %}
 {% load otree %}
 
-{% block title %}Preisempfehlungen im Spiel{% endblock %}
+{% block title %}Preisempfehlungen{% endblock %}
 
 {% block content %}
 
@@ -13,7 +13,7 @@ Die Empfehlung des Algorithmus basiert auf den vorherigen Preisen aller Teilnehm
 
     <br><br>
 <b>Wichtig:</b> Bei der Preisempfehlung handelt es sich lediglich um einen <b>Vorschlag</b>. Es steht Ihnen frei, einen anderen Preis als den empfohlenen zu setzen. 
-Dies kann allerdings Auswirkungen auf die Empfehlungen in der Zukunft haben.
+Dies kann allerdings Auswirkungen auf die Empfehlungen in der Zukunft haben. <br><br>
 Der Algorithmus zielt darauf ab, die <b>Gesamtgewinne aller Firmen über alle Runden hinweg zu maximieren.</b>
  Es wird Ihnen also eine Empfehlung ausgesprochen, die allen Firmen langfristig den größtmöglichen Gewinn ermöglicht.
   Der Algorithmus empfiehlt somit <b>nicht</b> einen Preis, der den höchstmöglichen Gewinn in einer einzelnen Runde erzielt. <br>
