fixed stuff after instruction revision with Matthias

--- a/introduction/templates/introduction/Introduction_4.html
+++ b/introduction/templates/introduction/Introduction_4.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 Nach jeder Runde werden alle Teilnehmer über die gewählten Preise aller drei Firmen und ihren eigenen Gewinn informiert.
- In der nächsten Runde hat jede Firma wieder die Möglichkeit Ihren Preis neu zu wählen. Die Teilnehmer sind dabei in allen Runden innerhalbes eines Spiels identisch. 
+ In der nächsten Runde hat jede Firma wieder die Möglichkeit ihren Preis neu zu wählen. Die Teilnehmer sind dabei in allen Runden innerhalb eines Spiels identisch. 
 
 <br><br>
 Nach jeder Runde entscheidet ein Zufallsmechanismus, ob eine weitere Runde gespielt wird oder das Spiel endet.
@@ -20,7 +20,7 @@ Sie spielen das beschriebene Spiel insgesamt drei mal.</b> Nach jedem Spiel werd
 Das bedeutet, dass Sie in jedem der drei Spiele mit anderen Teilnehmern interagieren. 
 
 <br><br>
-Nach Spielende wird zufällig entschieden, welches der drei Spiele ausgezahlt wird. Diesen Gewinn erhalten Sie im Anschluss an das Experiment.
+Nach dem alle Spiele beendet sind, wird zufällig entschieden, welches der drei Spiele ausgezahlt wird. Diesen Gewinn erhalten Sie im Anschluss an das Experiment.
  Außerdem erhalten Sie zusätzlich {{show_up_fee}} für die Teilnahme an diesem Experiment. 
 <br><br>
 Als Hilfsmittel blenden wir Ihnen einen virtuellen Taschenrechner ein, mit dem Sie Ihren Gewinn pro Runde berechnen können.
