fixed stuff that I discussed with Matthias

--- a/bertrand/templates/bertrand/RoundResults.html
+++ b/bertrand/templates/bertrand/RoundResults.html
@@ -27,10 +27,9 @@
 
             {% endfor %}
         </tr>
-
     </table>
-    
-    Ihr Preis in dieser Runde betrug {{ player.price }} Taler. Der Marktpreis betrug {{ group.winning_price }} Taler. Sie erhalten in dieser Runde einen Gewinn von {{player.profit}} Taler. 
+
+    Ihr Preis in dieser Runde betrug {{ player.price }} Taler. Der Algorithmus hatte allen Firmen einen Preis von {{group.recommendation}} Taler empfohlen. Der Marktpreis betrug {{ group.winning_price }} Taler. Sie erhalten in dieser Runde einen Gewinn von {{player.profit}} Taler. 
 
     <br><br>
 
