--- a/introduction/templates/introduction/Algorithm_Introduction.html
+++ b/introduction/templates/introduction/Algorithm_Introduction.html
@@ -6,9 +6,8 @@
 {% block content %}
 
 
-Bevor Sie in jeder Runde Ihren Preis wählen, erhalten Sie eine <b>Preisempfehlung</b>.
- Ein Algorithmus macht Ihnen also einen konkreten Preisvorschlag. Es handelt sich dabei um einen Computeralgorithmus.
-  Alle drei Firmen im Markt erhalten dieselbe Preisempfehlung.
+Bevor Sie in jeder Runde Ihren Preis wählen, erhalten Sie von einem Computeralgorithmus eine konkrete <b>Preisempfehlung</b>.
+Alle drei Firmen im Markt erhalten dieselbe Preisempfehlung.
 Die Empfehlung des Algorithmus basiert auf den vorherigen Preisen aller Teilnehmer in Ihrem Markt und kann sich somit in jeder Runde ändern. 
 
     <br><br>
